--- a/src/components/MainVideo/MainVideo.scss
+++ b/src/components/MainVideo/MainVideo.scss
@@ -17,6 +17,7 @@
 
         @include desktop {
             width: 100%;
+            padding: 0rem 12rem;
             margin: 0 auto 0 auto;
         }
     }
