--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -25,6 +25,7 @@
 
         @include desktop {
             width: 100%;
+            padding: 0rem 5rem;
             margin: 0 auto 0 auto;
         }
 
@@ -58,6 +59,10 @@
         @include tablet {
             width: 100%;
             }
+
+        @include desktop {
+            width: 60%;
+        }
     }
 
     &__search {
@@ -90,14 +95,20 @@
     }
 
     &__avatar {
-        width: 20%;
+        width: 15%;
         text-align: right;
 
         @include tablet {
+            width: 20%;
             display: flex;
             order: 2;
             padding-left: 1.5rem;
-            }
+        }
+
+        @include desktop {
+            width: 10%;
+            margin: 0rem;
+        }
 
         &-img {
             width: 2.5rem;
@@ -111,15 +122,6 @@
                 height: 2.75rem;
                 }
         }
-    }
-
-    &__button-container {
-        width: 100%;
-
-        @include tablet {
-            width: 35%;
-            padding: 0 1rem 0 0rem;
-            }
     }
 
     &__button {
@@ -142,7 +144,7 @@
             font-weight: 600;
             font-size: .9375rem;
             letter-spacing: .0156rem;
-            width: 55%;
+            width: 20rem;
             padding: 0.5rem 0.5rem 0.5rem 0.5rem;
             margin: 0 0 0 1rem;
         }
