--- a/src/components/Video/Video.scss
+++ b/src/components/Video/Video.scss
@@ -15,6 +15,10 @@
         width: 40%;
     }
 
+    @include desktop {
+        width: 125%;
+    }
+
     &__left {
         width: 35%;
     }
